@@ -4,15 +4,17 @@ Hash: SHA256
 DIST cdrtools-3.00.tar.bz2 1978563 SHA256 7f9cb64820055573b880f77b2f16662a512518336ba95ab49228a1617973423d SHA512 93887afd6c244814b7f6a623f0ac5b551934626163065a6f32aefe82aa7438450fd7a42737ef3cdaad3f18841c066d25e72e37891531dd0be5be328692712cec WHIRLPOOL a02750131e4ec55df10387a01dab3881afee669cd8b8ea65eaed4fdd82e6bd11040c6d79fc64ccc9377e787f5903ec92ea3ae81db1945554b65a8636737cc931
 DIST cdrtools-3.01a17.tar.bz2 2061522 SHA256 3d613965b213ad83e4be0ba2535e784901839ea4d11a20a2beb6765f0eb76dfa SHA512 34a0579c536028b030cf828441ad55a705472646bc3a1ae962aad234fbe0b12c2bcb670511487c17086f5ba7643d1b8ae42a4a86bfe2940dc94f9744377daa8b WHIRLPOOL b718d559e0b36a576a42a38f84b3917891450d0bbab47b084eb1e906a396cf28ce47b79fd16565d4e0697311ee0c3d5abdd95b52ba2d7ae4e9f32d9b26bc26e1
 DIST cdrtools-3.01a18.tar.bz2 2059197 SHA256 7e9ad9e00679bb0c0456455243eb41614a5a3395eebded9371a0c843dd3494d6 SHA512 d9d7e427b9860b387a4b50c5120e564a275ed377cd933836ed68713e004fb5573bfa06640cba62a1c38e6fef2ba34d4384fe2644d64077b05338e005116c07ee WHIRLPOOL fc8dce50b17d176a1c90ad182c8ff49ab1a1cb2e0fc916938d7d3a99b4b4d2b683e7d49278be72596dba98bc2a4b8b4072cb929dee36af60b966d639bd945799
+DIST cdrtools-3.01a19.tar.bz2 2065394 SHA256 9680547e0be8efa82d2ef542af47b5c0f465bc23fd5d8af27cb0328e4e5ba35e SHA512 88c1b23ce436bb2265bc64bb31b42904d48946ead2bda07a284371f2637e58b837a15dc6731d5f43f33cf9f9edbec7cf386b2b98a9ea4ccb71a3412f78e28981 WHIRLPOOL 5dc9a990cfc19e0148de8fd718ee0e017dd9f25d5ba8996d3b5ed740344abd8d6d8ec0b2ad7b4aebe16b2edefda67e5de1bc6ce5c3679e170f02ad8c263808ef
 EBUILD cdrtools-3.00.ebuild 4233 SHA256 a495c12da2cd2c8520e22e4f68930fb9b89b00474737fc2ed957d508cd6c19cd SHA512 5fafd3b220dc0cf725b22512ea1f122f07018950d803071ab10fbab3bac4b266b743a4c739220099b053952757be6a58ed4d198bda09923f80bc0cfd300c04d4 WHIRLPOOL f2733313073dc15c6463f30557729b5b53b8f07f40f3dd962f7cd5622b2f0c75fcfecc9ca1ae52a6a0908760dfdf7644ca7a91e4870a8841923fa63976118b56
 EBUILD cdrtools-3.01_alpha17.ebuild 4907 SHA256 1d98dd7079380df08999640bf4a762358c43e74b432ae82129804c636251447c SHA512 3676e1ec3c084c0d8eee0504f1f0ee3a9cd0d7395e369763e2be75a6815bec14c2312ada3daed25f1754b0a92d448b303c7089600fa4b791c00403bd56eae0c8 WHIRLPOOL 4ca482a494c4a9cf2c8a07a088ebbe49bff04d4a6b24cad01db8b97816af4997ca1a27e3d4be5267964dd63c2c127e53deff4f30a4860180ffcf57f0ebc46f3b
 EBUILD cdrtools-3.01_alpha18.ebuild 4905 SHA256 5d671c0e8621cdbd03a6df4d8ad249b204aa8dabf55fdd5677312068413db2df SHA512 77ebcf49ca319e14d172938e06a8f191a667b787999f0141a528b19a0bbbeb43577aea256aca46d436ba0cadcc5db56a4f7e587a6c298c8ffe13040a679429b5 WHIRLPOOL d97d0b1845dcfd259e2ff79d71861f5f0eff2268e1341028ded83a909e28ac9371aec6a2cbf96d7ec4e908fa1b43e566ef3f3ea06021a3b30762437eea619b9e
-MISC ChangeLog 49144 SHA256 bce5a10037aa6f9b6e13b961012a7b00f49dc6c44c0e618890c38ff57a9cb3fc SHA512 e1befd45e17fd2baffffa0bcba5e1c271985aecdf33fbf9a78c4aaeb38ac68afe2f5faf060bd666572f00be350dd6c8d4c73b02996a5106c0100ef2a0a778c55 WHIRLPOOL d79366bddf269d290d75f38cf73f9dbd4752f7c689d34ff4216a55dfde667694ee2b734cfd27b4012072abf0252f2c4c1e75cf8bf0dfe29deb14e79c2bdb562e
+EBUILD cdrtools-3.01_alpha19.ebuild 4893 SHA256 da334176800be953775c5b5cfa0ae88cb6183ccc5e2924936c61146f24ed8806 SHA512 6e18c508efc754d4a788d7e116c52a26bbf5a9ba82aeaa6e539c9b64a199ce42b0ece119fbd3e09795bad684d19c2962cba887385466a6e3b71d9de1ebbc7b04 WHIRLPOOL 66b9e8d00502f261f14db16eff6af2307abb74dfcc523c52f96e010a28c84f054a6c1bfc497b871260fbd99c3acb92bc10db74cba654586d5eace0b26a926bc9
+MISC ChangeLog 49284 SHA256 72d17b738baca6a880e72cdeaa575c7e04e5a37ef85024f89d78677d2d0fe52c SHA512 cd290cd2e8a921df1874b0737db1d63793c5ae1185680180f0fb068f8fa7b6c65325edeec78bf02f337223c22ff3429da668fdd1f2a2aacabfe73803c5c358d2 WHIRLPOOL 96af384aed00dfa4d0dc2b1f816aab316c2a9b60cead3c6959e595aebcc2a5e23fde82a6edfa1309b6f29086eccda8cb515e44df24a79764ab820cee7ecc129a
 MISC metadata.xml 507 SHA256 f1086372c5bae26f9438544c1102cbadc619718b163392cbe35f3b359560ef3b SHA512 77aef4353064a013d1944ee796b1a6cb9a8a60c698d53df46cac7be17c556d9a495c71b9578a536c61c429a0c87e894e962bdca9167bbc60522ef25aeab756a6 WHIRLPOOL 0771499480bc135391ab921f22aba47f9966b68c79083f29f9df8c185919b65422f69953cc876d7dca8a2af5539b85e0c592f4521f5b4034ca5cb6035dc7c28b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlJkPIIACgkQkKaRLQcq0GJ1tQCgq8mmb3juz4YumGh1kyIE8Du2
-eUoAn2Hp7OZPWj2T5BEK7KTh04MgO4ml
-=dxFV
+iEYEAREIAAYFAlKQpy8ACgkQlcuUeyFa0U1BiQCeMRtLzyQ8eaaVrxV0dqgMd8ML
+J9UAoMDgrtdee1462+OreJSPPtJjc9Vd
+=RKI4
 -----END PGP SIGNATURE-----
