@@ -4,28 +4,30 @@ Hash: SHA256
 DIST screenfetch-2.7.7.zip 41420 SHA256 c50322375929c78b13afc5fd4e62259087db3988283109ddcf60e98194f3adc8 SHA512 b783c05fc385d176e8d4e06c647c86ceef0ec465ddaa7ceab4116dc844e6a3a4cb10a706aef62ed4c0e1893942be4761dc1962e99d45b528742372415bd17b10 WHIRLPOOL ab863a39d5610ca86302cdbedbb83c4a4da6909093c0a6b7e43d92c1a5f1bf86a34f2ce316ab6168fa6097d478b4838160758a8ce0de9c0404ed538461f868c3
 DIST screenfetch-2.9.0.zip 44898 SHA256 c7bf20ee9173fbe44a67bde905bdb42fab21fd44236228b968a8b281a9200193 SHA512 bd1504064a8dbe308eb09582fb840a28a6fbfbb08287b25ef11e57850b900e14c315679996050c4ac7c1a721d62a511b49a366a48e7cbcc6e85cd51c95fae8df WHIRLPOOL 82e5917faefa5e825d3078ab727c17e9dd9205eb0c1303724e0179e34fe26d1ba6fdcad05e8291762fc184cf1cc014aceefbefeba0cba19e17bd018de5373428
 DIST screenfetch-3.0.5.tar.gz 43444 SHA256 2fbc11103e6a37da92e13167886a3dc13b6d7ea50fad1f483a8241c9c31d0739 SHA512 1edb711ada8314de4b20f8743d0cc4d1be62288ef369f03d9086c44da4aa0ebe0740cc044cebff81c6db3286540a7d25c236a9afad1c9acfac5b120a60abc987 WHIRLPOOL 39968157f1c8d5ffc6af08c6eaabb3df51f04c82635dfed1b111aae83edd0d65b6a05e78fd43bdae36f48929caf9ac153eef3d78eed84e623bd864d465432223
+DIST screenfetch-3.2.2.tar.gz 46668 SHA256 6f30cc06b1f19cbeffc211afdf4c754c1e77b5e35965240ea77b032bb2e32bd4 SHA512 f8ddfcebe69919c9163c2377de8dfb28f15c9dd59c43d73245591b2ba6c41123c6c8130b673d87e6068850fca3b277f93bbb626e228266ea0c87be5856e823da WHIRLPOOL 7514eafaa7fb1df51a8beb5720f771217b32b902ca4e4433cfbe0f058dc11ccd82529b7622a1686878ad2e983063cfeaed0c9302b47f335a1dc4e5cb628568e4
 EBUILD screenfetch-2.7.7.ebuild 753 SHA256 e63293f7b97ca6d6414ce9ff63237902fc86a5bcf0c67baa536b488b597e091b SHA512 ddb18a90e465ad378ca4937e8576a08ab1a657e17596d549ba190d436b3bd3579e7bdc46811b142ddc43a8f70fe7cbd533e90795da074f4d0f1689764b6e21fa WHIRLPOOL fd6160e6c9a5e945a4ab2a5a55ea92c4d1f832b534eb682cb44d65df12bc7242cf897f46a0a6bf55dbf15ebcb53d68ccc86a60ac7c868e378a616a5eb8f35a84
 EBUILD screenfetch-2.9.0.ebuild 755 SHA256 6a1d8888d85e54ff0431d1b970f0557535f275532fb9dd49ff92dcf7880c9d7c SHA512 09ca7350dc9b6f13c210dbf4c70b0cbf009639ab94959ecbc424fff4beccb9945733bf50a2e6404768d7a4a197030d49c11798d05e3626e22bda009eaec5e918 WHIRLPOOL ad117ae1622179e9c1fa633fc08f3c330421a022640871aaf9dbf8299810c49924373d1e50b20c808e0e092c3b36e2f6bdb732b48ceca12fd6ecf74b0494eb5d
 EBUILD screenfetch-3.0.5.ebuild 838 SHA256 ca81eb7a3d7c48af373a5b3cf231062db4fb9a9261096b879487c0cb0e668b2f SHA512 17a6b3faf5e56cee231974895a12d573475fd685ae5db1499a6882a42fe97a1a650fb4a813e828be8cbcaa98699f9ab444eed00479cb384332c6d65da83fa97f WHIRLPOOL 5f1ae5630edd0485403ef0186c3e458144f49f8855507e8c1e1b9a6f2401239c5068b00391c095ae944ba6274faf49efde84340573e5c3dfc81eacb11e8cf78b
-EBUILD screenfetch-9999.ebuild 837 SHA256 1a847e52e2e408ffb28e8f0f8fe9138caa2077a98e6643ffc31f8a376a9c10cd SHA512 33f1579bd36d6cb3325a8924fc12cbd0b0592f02ca33a55a6520b7dabba5df990a04fe349b9adadb8fc8ddc116d7a060d151d0543976e717a1a5d2a145ca9fbd WHIRLPOOL fb9c428fb22514b0d47f874634a6bb3cf320ea57fe16427f42deae2d299f7c7277580e97ed796ac00dbbecc5fd8487284b9c7e6d714718351880eac32e857f41
-MISC ChangeLog 1558 SHA256 55fc3d3d5265a03746fe366797e67b16f1612b85d0e0ba8259285949ced67c92 SHA512 391af44d4aafd290f14aaf27b0c18e7de295689dcbf04f1e81bdcc5c049164dca56b95137630343fdecb447c064d6e0edf5030d850d4e36a3b60264de2f6874c WHIRLPOOL 2036f286997998dcc19c07a86d5d37aebe47ef5195443e2a57be0208b489d17478665ede644e0ed31915f658400adb38993efe2279fb3c40e2568f2f36ccc502
+EBUILD screenfetch-3.2.2.ebuild 784 SHA256 b5c2c7f5d30e5e2ad968ba29bdd6a5ebdb9ce367fac428c49f524a00984fd6f1 SHA512 b30b7f6322ef9dd0949553e67d0a65c6dbcbd03c38ec3fdf4ddbd594c8d7e2f62afdfc4839a3fc297dfd60dcd51d2f41726a6fe63c634a0a752f8cec4ea3e064 WHIRLPOOL 8b2863422400aeff5fe3cdf77f1020e1c098618b7e80e9f55386d801df675ce3288df9d1d8a58627663b842551f59946a6a0ecfebeea6495d3e9c6238ec98752
+EBUILD screenfetch-9999.ebuild 783 SHA256 1afa043951b20ee01f8a3f0932f5317ca34a3c98dc1002443600a5b518adba3c SHA512 f81b948efd19cc44a53836c65db9a5733b4510e866188eeeefefea3e7335f9fd3f75ae18f3f1e5b16b8cffeeead8cf756989f74d20a8230ce3b7248bf4150c1c WHIRLPOOL 50dd25c10480c33e409b113b749e86e915bca3237918713016e581e2bccb3adecfccbd2d8ba92232defad7b10c97a63b04687a5d89d33952e1595889048c516e
+MISC ChangeLog 1729 SHA256 ddc3ff50731c1abf075699b5eaa68f63f9db83c0ee6987dcca8f071a84c3d0df SHA512 d10ddc40c30b460a113d2beb8abb3805ff7b042a17056159640d62b4f0a1f4cf553a4cf1873fdeab16ec51a81c9cbbd4cac1bcbdaf1868d7e984b248cfd0aa74 WHIRLPOOL 2d8ae13119feafc1d1a828751673fdce2314df08edf2b9bbdda2c0391ec05ca0c8b963061d88cd7b986caf2361013448d0aa24d139e684281d3b7c387cdc895d
 MISC metadata.xml 231 SHA256 bfedc80cf66f550ff8a0ba8be3f975f39d55c10ef2de07647472116418735e69 SHA512 f0b36d43f986a03774e3f032cdcdaddfbba0d3441de7695139714f5a0b5ddbd3b82634a6f8844bbbf16ad504d349a30d7e7cbfc8e3a6cec53e5feb076df582a0 WHIRLPOOL f6f2b27de03477ef1fdda3d4169ca122c7c3f338621238411f65d3b02ab215745fb6fbeb1a167c45673115c225079346b1645a2f12e8596eb92625c53f5451e3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJSITARXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJSkKv8XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88XKIQAJkfLgIFFhBeYy+jB/A2mtMD
-nKH81JEgATSXwNTJLwFcORCZI+FQGqHKbf+KAMZBQWkXnb6CRu/Zqv+q0lwbRT2u
-LIs+9AyCn3AKWipRdj0bhK46QiYZ3aYY3deFDB9VPr3I8TCjClLQzeOzMfE16L4Z
-zf1TNddJDlFdJEREvslx6/UDkeIgx5S9Py9LPJx/NCzVFx80npEUbw6Pai4T6EXg
-LKcWGpP04aYpMooyWguEX1CBo0SOUX1YdYFfFZZilmu6q19vsJrozJLRkS97sEIS
-ERHINIDACQwM2V1XSr9JB50U/tCTWsehJg1L5uAi/anrTntSkOsr0A0agSqRKHH9
-SXsFGucvcfgcJFPdLz2q4flW62NwLg86gHyn/VwHVOnYbbo+rJZgBeHghhqn0FjJ
-xDru2vHeupAbfdSu6JZFXl7CyW5/gjUOIw/k9ofTjKEikD+Pb5Rji7GQrH1U985Y
-uv+r/9UwO03qjAgyT3ecyEKc+ni8brF1bGB9Ki7sSebHhSlBDxYAk5UpDHXEgljL
-8hPHG0Q178koWrQ4ydzTkjgnI3ybXD/5PNgec0BPQ9nfOzotWU1LMczjXG3NGNIy
-gbbxz8AatGbt5OZf+BcqSteLu+qptN1rxk6wpNu2mvnc3GbIaqLDpxlUQKsJBxLc
-bh2k0zJOnorltQ66DegU
-=fYpP
+OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88zEwP/01oDWs4l+BlpW+x6Uigalgs
+OilCmHeJUhDrrm4S93Yv33XKBvlQIwDeieLnOASZKwUlvaoPVImoiGrjXoaawiAY
+HbHA6jCjDzCv1h/hHbnSDw3ugDWhp9QvsZniBoxDe1b3Z+6UD+XfhMcLyciDnD2r
+eHsP6AhFAz0REPwnkNdl09jIco8MC21LArQq342qQjB0xISXTVvk4SOIobBn3owc
+BHyw5Oo7x/pmvR+oGU5WTtggoF28BbaQMcDlJBiEhLSDR4rTb+G+dHvB/fu7heI4
+cLX5HqLKbx8dz5E3tIamixX70RGD7vXeJJu2pURxfvQ+iI4gT66D5nbNK9PhVoQd
+bn15CatygrJInPnogHt8mrb/S6UEAHKvaeW0dG0+MqfTVY+RMewVQgGTa5e4AfUO
+Ndc10IWTkruIp1XSTgcCuzfGsVZ7OMrfH4qMChbH6NjgF2/kuE8VG4z/vekxijmX
+ZHlklQqYsfprNxn0iLm8/8ZVXST87exUFrNEYOVKN5oj9kYldNsVM1E5/u9BuGE8
+8xSP5kDw0L07YA4HU8ZWRXkKNyVKRrdCcPJKZO5ylgdiPKFY975XCmSzH3f9jKgN
+d+fy6+2c8WHv42haoDe+CHWe82Mdqy68jWwHTbUueOPIkdZrsJjZI5l8kl13to52
+SzkwPveu5u8MUO0ntzoG
+=G3v0
 -----END PGP SIGNATURE-----
