@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/screenfetch/screenfetch-9999.ebuild,v 1.2 2013/11/23 13:22:07 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/screenfetch/screenfetch-3.2.2.ebuild,v 1.1 2013/11/23 13:22:07 hwoarang Exp $
 
 EAPI=4
 
