@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst prepare
+DEPEND=acl? ( virtual/acl ) nls? ( virtual/libintl ) !app-cdr/cdrkit nls? ( >=sys-devel/gettext-0.18.1.1 ) filecaps? ( sys-libs/libcap )
+DESCRIPTION=A set of tools for CD/DVD reading and recording, including cdrecord
+EAPI=5
+HOMEPAGE=http://cdrecord.berlios.de/private/cdrecord.html
+IUSE=acl nls unicode +filecaps
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris
+LICENSE=GPL-2 LGPL-2.1 CDDL-Schily
+RDEPEND=acl? ( virtual/acl ) nls? ( virtual/libintl ) !app-cdr/cdrkit
+SLOT=0
+SRC_URI=ftp://ftp.berlios.de/pub/cdrecord/alpha//cdrtools-3.01a19.tar.bz2
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	fcaps	832d0c7d930e7df835c19b5d0a5f6f4b	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=1b38576cc74be5942c55734074632cd2
