@@ -1,0 +1,10 @@
+DEFINED_PHASES=install
+DESCRIPTION=A Bash Screenshot Information Tool
+EAPI=4
+HOMEPAGE=https://github.com/KittyKatt/screenFetch
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-3
+RDEPEND=media-gfx/scrot x11-apps/xdpyinfo
+SLOT=0
+SRC_URI=https://github.com/KittyKatt/screenFetch/archive/v3.2.2.tar.gz -> screenfetch-3.2.2.tar.gz
+_md5_=7135803607067831c41ae98455d8d261
