@@ -7,4 +7,4 @@ LICENSE=GPL-3
 RDEPEND=media-gfx/scrot x11-apps/xdpyinfo
 SLOT=0
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	git-2	2027b81a576527fa16bece425941e094	git-r3	f089608c770d9ad72a2c92b547d2b20d	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=c833b7ff5abd754dff8205054b47279b
+_md5_=0997bf948f81d52392d8101669cb7103
