@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/screenfetch
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/screenfetch/ChangeLog,v 1.9 2013/08/30 23:52:45 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/screenfetch/ChangeLog,v 1.10 2013/11/23 13:22:07 hwoarang Exp $
+
+*screenfetch-3.2.2 (23 Nov 2013)
+
+  23 Nov 2013; Markos Chandras <hwoarang@gentoo.org> +screenfetch-3.2.2.ebuild,
+  screenfetch-9999.ebuild:
+  Version bump. Bug #491488
 
 *screenfetch-9999 (30 Aug 2013)
 *screenfetch-3.0.5 (30 Aug 2013)
