@@ -1,6 +1,12 @@
 # ChangeLog for app-cdr/cdrtools
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.317 2013/10/20 20:20:07 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.318 2013/11/23 13:01:30 billie Exp $
+
+*cdrtools-3.01_alpha19 (23 Nov 2013)
+
+  23 Nov 2013; Daniel Pielmeier <billie@gentoo.org>
+  +cdrtools-3.01_alpha19.ebuild:
+  Version bump.
 
   20 Oct 2013; Markus Meier <maekke@gentoo.org> cdrtools-3.01_alpha17.ebuild:
   arm stable, bug #486318
